@@ -1,3 +1,14 @@
+2012-12-15: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+	* RandomPlaylistFeed.[h|m] honour the IncludeUnratedSongs
+	  default, and optimize algorithm a bit.
+	* PlaylistInspector.[h|m] new outlets for the 
+	  IncludeUnratedSongs default, and grey out other text
+	  when it is disabled
+	* Resources/PlaylistInspector.gorm
+	  new outlets for some text in order to disable them,
+	  and checkbox to include unrated songs
+	* SQLiteAdaptor.m little fix
+
 2012-12-12: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* PlaylistItem.[m|h] make the rating an Integer, not
 	  unsigned integer
